--- a/client/myclient.vcxproj.filters
+++ b/client/myclient.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\shared\socket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sources\clnapi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sources\mysettings.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\shared\socket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\clnapi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
