--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -4,7 +4,7 @@ project(myclient)
 include_directories(../shared/)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -pthread -std=c++14")
-set(SRC_LIST sources/main.cpp sources/mysettings.cpp ../shared/cfgparser.cpp ../shared/socket.cpp ../shared/packsock.cpp)
+set(SRC_LIST sources/main.cpp sources/mysettings.cpp sources/clnapi.cpp ../shared/cfgparser.cpp ../shared/socket.cpp ../shared/packsock.cpp)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
