--- a/client/myclient.vcxproj.filters
+++ b/client/myclient.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="sources\clnapi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\shared\csnet_api.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sources\mysettings.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="sources\clnapi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\shared\csnet_api.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
