smart connect fixed

--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -1,9 +1,9 @@
 [connect]
-#host = 127.0.0.1
+host = 127.0.0.1
 #host = mephi
-host=saint-clifftown
+#host=saint-clifftown
 port = 3425
-connect_attempts = 10
-next_attempt = 100
+connect_attempts = 20
+next_attempt = 500
 login = user
 password = 123456
