--- a/server/myserver.vcxproj.filters
+++ b/server/myserver.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="sources\myservice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sources\expression.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sources\daemon.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="sources\myservice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\expression.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
